<?xml version="1.0" ?><resources>

    <string name="ui_navigator_navigation_drawer_open">Open navigation drawer</string>
    <string name="ui_navigator_navigation_drawer_close">Close navigation drawer</string>
    <string name="ui_navigator_nav_header_title">Android Studio</string>
    <string name="ui_navigator_nav_header_subtitle">android.studio@android.com</string>
    <string name="ui_navigator_nav_header_desc">Navigation header</string>
    <string name="ui_navigator_action_settings">Settings</string>

    <string name="ui_navigator_menu_home">Home</string>
    <string name="ui_navigator_menu_gallery">Gallery</string>
    <string name="ui_navigator_menu_slideshow">Slideshow</string>
    <string name="ui_navigator_menu_tools">Tools</string>
    <string name="ui_navigator_menu_share">Share</string>
    <string name="ui_navigator_menu_send">Send</string>

    <string name="ui_navigator_app_name">Navigator Example</string>
</resources>