<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ui_navigator_nav_home"
            android:icon="@drawable/ui_navigator_ic_menu_camera"
            android:title="@string/ui_navigator_menu_home" />
        <item
            android:id="@+id/ui_navigator_nav_gallery"
            android:icon="@drawable/ui_navigator_ic_menu_gallery"
            android:title="@string/ui_navigator_menu_gallery" />
        <item
            android:id="@+id/ui_navigator_nav_slideshow"
            android:icon="@drawable/ui_navigator_ic_menu_slideshow"
            android:title="@string/ui_navigator_menu_slideshow" />
        <item
            android:id="@+id/ui_navigator_nav_tools"
            android:icon="@drawable/ui_navigator_ic_menu_manage"
            android:title="@string/ui_navigator_menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/ui_navigator_nav_share"
                android:icon="@drawable/ui_navigator_ic_menu_share"
                android:title="@string/ui_navigator_menu_share" />
            <item
                android:id="@+id/UI_NAVIGATOR_nav_send"
                android:icon="@drawable/ui_navigator_ic_menu_send"
                android:title="@string/ui_navigator_menu_send" />
        </menu>
    </item>

</menu>
