<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ui_navigator_mobile_navigation"
    app:startDestination="@+id/ui_navigator_nav_home">

    <fragment
        android:id="@+id/ui_navigator_nav_home"
        android:name="com.github.yard01.sandbox.navigator_example.ui.home.HomeFragment"
        android:label="@string/ui_navigator_menu_home"
        tools:layout="@layout/ui_navigator_fragment_home" />

    <fragment
        android:id="@+id/ui_navigator_nav_gallery"
        android:name="com.github.yard01.sandbox.navigator_example.ui.gallery.GalleryFragment"
        android:label="@string/ui_navigator_menu_gallery"
        tools:layout="@layout/ui_navigator_fragment_gallery" />

    <fragment
        android:id="@+id/ui_navigator_nav_slideshow"
        android:name="com.github.yard01.sandbox.navigator_example.ui.slideshow.SlideshowFragment"
        android:label="@string/ui_navigator_menu_slideshow"
        tools:layout="@layout/ui_navigator_fragment_slideshow" />

    <fragment
        android:id="@+id/ui_navigator_nav_tools"
        android:name="com.github.yard01.sandbox.navigator_example.ui.tools.ToolsFragment"
        android:label="@string/ui_navigator_menu_tools"
        tools:layout="@layout/ui_navigator_fragment_tools" />

    <fragment
        android:id="@+id/ui_navigator_nav_share"
        android:name="com.github.yard01.sandbox.navigator_example.ui.share.ShareFragment"
        android:label="@string/ui_navigator_menu_share"
        tools:layout="@layout/ui_navigator_fragment_share" />

    <fragment
        android:id="@+id/ui_navigator_nav_send"
        android:name="com.github.yard01.sandbox.navigator_example.ui.send.SendFragment"
        android:label="@string/ui_navigator_menu_send"
        tools:layout="@layout/ui_navigator_fragment_send" />
</navigation>